force-app/main/default/objects/Expenditure_Form__c/Expenditure_Form__c.object-meta.xml
<CustomObject>
    <label>Expenditure Form</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenditure Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>