force-app/main/default/objects/Expenditure_Form__c/fields/Bus_Fare__c.field-meta.xml
<CustomField>
    <fullName>Bus_Fare__c</fullName>
    <inlineHelpText>Monthly Bus/Taxi Fare</inlineHelpText>
    <label>Bus/Taxi Fare</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>