force-app/main/default/objects/Expenditure_Form__c/fields/Cable__c.field-meta.xml
<CustomField>
    <fullName>Cable__c</fullName>
    <inlineHelpText>Monthly Cable Bill</inlineHelpText>
    <label>Cable</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>