force-app/main/default/objects/Expenditure_Form__c/fields/Charity_3__c.field-meta.xml
<CustomField>
    <fullName>Charity_3__c</fullName>
    <inlineHelpText>Monthly Donation</inlineHelpText>
    <label>Charity 3</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>