force-app/main/default/objects/Expenditure_Form__c/fields/Charity_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Charity_Subtotal__c</fullName>
    <formula>Charity_1__c  +  Charity_2__c  +  Charity_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Charity Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>