force-app/main/default/objects/Expenditure_Form__c/fields/Clothing__c.field-meta.xml
<CustomField>
    <fullName>Clothing__c</fullName>
    <inlineHelpText>Monthly Clothing Fare</inlineHelpText>
    <label>Clothing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>