force-app/main/default/objects/Expenditure_Form__c/fields/Credit_card__c.field-meta.xml
<CustomField>
    <fullName>Credit_card__c</fullName>
    <inlineHelpText>Monthly Credit Card Bill</inlineHelpText>
    <label>Credit card</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>