force-app/main/default/objects/Expenditure_Form__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customers</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer Salesforce</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Updated From SOR</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenditure Forms</relationshipLabel>
    <relationshipName>Expenditure_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>