force-app/main/default/objects/Expenditure_Form__c/fields/Dining_Out__c.field-meta.xml
<CustomField>
    <fullName>Dining_Out__c</fullName>
    <inlineHelpText>Monthly Dining Out  Bill</inlineHelpText>
    <label>Dining Out</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>