force-app/main/default/objects/Expenditure_Form__c/fields/Dry_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Dry_Cleaning__c</fullName>
    <inlineHelpText>Monthly Dry Cleaning Bill</inlineHelpText>
    <label>Dry Cleaning</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>