force-app/main/default/objects/Expenditure_Form__c/fields/Electricity__c.field-meta.xml
<CustomField>
    <fullName>Electricity__c</fullName>
    <inlineHelpText>Monthly Electricity Bill</inlineHelpText>
    <label>Electricity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>