force-app/main/default/objects/Expenditure_Form__c/fields/Extra_Income__c.field-meta.xml
<CustomField>
    <fullName>Extra_Income__c</fullName>
    <inlineHelpText>Monthly Extra Income</inlineHelpText>
    <label>Extra Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>