force-app/main/default/objects/Expenditure_Form__c/fields/Food_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Food_Subtotal__c</fullName>
    <formula>Groceries__c  +  Dining_Out__c  +  Food_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Food Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>