force-app/main/default/objects/Expenditure_Form__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <inlineHelpText>Monthly Fuel Fare</inlineHelpText>
    <label>Fuel</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>