force-app/main/default/objects/Expenditure_Form__c/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <inlineHelpText>Monthly Gas Bill</inlineHelpText>
    <label>Gas</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>