force-app/main/default/objects/Expenditure_Form__c/fields/Groceries__c.field-meta.xml
<CustomField>
    <fullName>Groceries__c</fullName>
    <inlineHelpText>Monthly Groceries Bill</inlineHelpText>
    <label>Groceries</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>