force-app/main/default/objects/Expenditure_Form__c/fields/Hair__c.field-meta.xml
<CustomField>
    <fullName>Hair__c</fullName>
    <inlineHelpText>Monthly Hair/Nails Bill</inlineHelpText>
    <label>Hair/Nails</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>