force-app/main/default/objects/Expenditure_Form__c/fields/Health_Club__c.field-meta.xml
<CustomField>
    <fullName>Health_Club__c</fullName>
    <inlineHelpText>Monthly Health Club Bill</inlineHelpText>
    <label>Health Club</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>