force-app/main/default/objects/Expenditure_Form__c/fields/Health_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Health_Insurance__c</fullName>
    <inlineHelpText>Monthly Health Insurance Bill</inlineHelpText>
    <label>Health Insurance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>