force-app/main/default/objects/Expenditure_Form__c/fields/Home_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Home_Insurance__c</fullName>
    <inlineHelpText>Monthly Home Insurance Bill</inlineHelpText>
    <label>Home Insurance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>