force-app/main/default/objects/Expenditure_Form__c/fields/House_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>House_Maintenance__c</fullName>
    <inlineHelpText>Monthly House Maintenance Bill</inlineHelpText>
    <label>House Maintenance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>