force-app/main/default/objects/Expenditure_Form__c/fields/Housing_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Housing_Subtotal__c</fullName>
    <description>Sum of Housing &amp; Expenditure</description>
    <formula>Cable__c  +  Electricity__c  +  Gas__c  +  House_Maintenance__c  +  Housing_Other__c  +  Mortgage_or_Rent__c  +  Phone__c  +  Water_and_Sewer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Housing &amp; Expenditure Subtotal  Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>