force-app/main/default/objects/Expenditure_Form__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <inlineHelpText>Monthly Income</inlineHelpText>
    <label>Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>