force-app/main/default/objects/Expenditure_Form__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <inlineHelpText>Monthly Insurance Bill</inlineHelpText>
    <label>Insurance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>