force-app/main/default/objects/Expenditure_Form__c/fields/Insurance_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Subtotal__c</fullName>
    <formula>Home_Insurance__c  +  Health_Insurance__c  +  Life_Insurance__c  +  Other_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Insurance Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>