force-app/main/default/objects/Expenditure_Form__c/fields/Investment_Account__c.field-meta.xml
<CustomField>
    <fullName>Investment_Account__c</fullName>
    <inlineHelpText>Monthly Investment Account Bill</inlineHelpText>
    <label>Investment Account</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>