force-app/main/default/objects/Expenditure_Form__c/fields/Licensing__c.field-meta.xml
<CustomField>
    <fullName>Licensing__c</fullName>
    <inlineHelpText>Monthly Licensing Bill</inlineHelpText>
    <label>Licensing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>