force-app/main/default/objects/Expenditure_Form__c/fields/Life_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurance__c</fullName>
    <inlineHelpText>Monthly Life Insurance Bill</inlineHelpText>
    <label>Life Insurance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>