force-app/main/default/objects/Expenditure_Form__c/fields/Loan_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Loan_Subtotal__c</fullName>
    <formula>Student_Loan__c  +  Personal_Loan__c  +  Credit_card__c  +  Other_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Loan Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>