force-app/main/default/objects/Expenditure_Form__c/fields/Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Maintenance__c</fullName>
    <inlineHelpText>Monthly Maintenance Bill</inlineHelpText>
    <label>Maintenance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>