force-app/main/default/objects/Expenditure_Form__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <inlineHelpText>Monthly Medical Bill</inlineHelpText>
    <label>Medical</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>