force-app/main/default/objects/Expenditure_Form__c/fields/Mortgage_or_Rent__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_or_Rent__c</fullName>
    <inlineHelpText>Monthly Mortgage or Rent Bill</inlineHelpText>
    <label>Mortgage or Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>