force-app/main/default/objects/Expenditure_Form__c/fields/Net_Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Disposable_Income__c</fullName>
    <formula>Total_Income__c  - Total_Expenditure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Net Disposable Income</inlineHelpText>
    <label>Net Disposable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>