force-app/main/default/objects/Expenditure_Form__c/fields/Organization_Dues__c.field-meta.xml
<CustomField>
    <fullName>Organization_Dues__c</fullName>
    <inlineHelpText>Monthly Organization Dues Or Fees</inlineHelpText>
    <label>Organization Dues Or Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>