force-app/main/default/objects/Expenditure_Form__c/fields/Personal_Loan__c.field-meta.xml
<CustomField>
    <fullName>Personal_Loan__c</fullName>
    <inlineHelpText>Monthly Personal Loan Bill</inlineHelpText>
    <label>Personal Loan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>