force-app/main/default/objects/Expenditure_Form__c/fields/Personal_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Personal_Subtotal__c</fullName>
    <formula>Medical__c  +  Hair__c  +  Clothing__c  +  Dry_Cleaning__c  +  Health_Club__c  +  Organization_Dues__c  +  Personal_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthiy Personal Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>