force-app/main/default/objects/Expenditure_Form__c/fields/Pet_Food__c.field-meta.xml
<CustomField>
    <fullName>Pet_Food__c</fullName>
    <inlineHelpText>Monthly Food Fare</inlineHelpText>
    <label>Food</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>