force-app/main/default/objects/Expenditure_Form__c/fields/Pet_Grooming__c.field-meta.xml
<CustomField>
    <fullName>Pet_Grooming__c</fullName>
    <inlineHelpText>Monthly Gromming Bill</inlineHelpText>
    <label>Grooming</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>