force-app/main/default/objects/Expenditure_Form__c/fields/Pet_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Pet_Subtotal__c</fullName>
    <formula>Pet_Grooming__c  +  Pet_Food__c  +  Pet_Medical__c  +  Pet_Toys__c  +  Pet_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Pet Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>