force-app/main/default/objects/Expenditure_Form__c/fields/Pet_Toys__c.field-meta.xml
<CustomField>
    <fullName>Pet_Toys__c</fullName>
    <inlineHelpText>Monthly Toys Bill</inlineHelpText>
    <label>Toys</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>