force-app/main/default/objects/Expenditure_Form__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <inlineHelpText>Monthly Phone Bill</inlineHelpText>
    <label>Phone Bill</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>