force-app/main/default/objects/Expenditure_Form__c/fields/Retirement_Account__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Account__c</fullName>
    <inlineHelpText>Monthly Retirement Account Bill</inlineHelpText>
    <label>Retirement Account</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>