force-app/main/default/objects/Expenditure_Form__c/fields/Savings_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Savings_Subtotal__c</fullName>
    <formula>Retirement_Account__c  +  Investment_Account__c  +  Savings_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Savings Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>