force-app/main/default/objects/Expenditure_Form__c/fields/Student_Loan__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan__c</fullName>
    <inlineHelpText>Monthly Student Loan Bill</inlineHelpText>
    <label>Student Loan</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>