force-app/main/default/objects/Expenditure_Form__c/fields/Total_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenditure__c</fullName>
    <formula>Charity_Subtotal__c  +  Food_Subtotal__c  +  Housing_Subtotal__c  +  Insurance_Subtotal__c  +  Personal_Subtotal__c  +  Savings_Subtotal__c  +  Transportation_Subtotal__c  +  Pet_Subtotal__c +  Loan_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Total Expenditure</inlineHelpText>
    <label>Total Expenditure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>