force-app/main/default/objects/Expenditure_Form__c/fields/Transportation_Other__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Other__c</fullName>
    <inlineHelpText>Monthly Other Bill</inlineHelpText>
    <label>Other</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>