force-app/main/default/objects/Expenditure_Form__c/fields/Transportation_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Subtotal__c</fullName>
    <formula>Vehicle_Payment__c  +  Bus_Fare__c  +  Insurance__c  +  Licensing__c  +  Fuel__c  +  Maintenance__c  +  Transportation_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Monthly Transportation Subtotal Fare</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>