force-app/main/default/objects/Expenditure_Form__c/fields/Vehicle_Payment__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Payment__c</fullName>
    <inlineHelpText>Monthly Vehicle Payment Bill</inlineHelpText>
    <label>Vehicle Payment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>