force-app/main/default/objects/Expenditure_Form__c/fields/Water_and_Sewer__c.field-meta.xml
<CustomField>
    <fullName>Water_and_Sewer__c</fullName>
    <inlineHelpText>Monthly Water and Sewer Bill</inlineHelpText>
    <label>Water and Sewer</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>