force-app/main/default/objects/Expenditure_Form__c/listViews/All_Forms.listView-meta.xml
<ListView>
    <fullName>All_Forms</fullName>
    <columns>NAME</columns>
    <columns>Customers__c</columns>
    <columns>Total_Income__c</columns>
    <columns>Total_Expenditure__c</columns>
    <columns>Net_Disposable_Income__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Forms</label>
</ListView>